Fix errors dialog selector so that overflow works

--- a/src/tracing/timeline_view.css
+++ b/src/tracing/timeline_view.css
@@ -172,7 +172,7 @@
   color: red;
 }
 
-.import-errors-dialog {
+.view-import-errors-overlay {
   max-height: 500px;
   max-width: 800px;
   min-height: 200px;
